00-integrated item/po-ams/ams.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ams-ingress
  namespace: po-ams
spec:
  rules:
    - host: po-ams.ailab.lenovo.com
      http:
        paths:
          - backend:
              serviceName: po-ams-web-svc
              servicePort: 80
