00-integrated item/po-ams/ser.ams.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ser-ams-ingress
  namespace: po-ams
spec:
  rules:
    - host: po-ams-ser.ailab.lenovo.com
      http:
        paths:
          - backend:
              serviceName: po-ams-ser-svc
              servicePort: 80
